Add funktion to update appointment