@@ -2,6 +2,7 @@ package com.example.projekt.controller;
 
 import com.example.projekt.model.Appointment;
 import com.example.projekt.model.Client;
+import com.example.projekt.service.AlertService;
 import com.example.projekt.service.NavigateService;
 import com.example.projekt.sql.AppointmentCRUD;
 import com.example.projekt.sql.ClientCRUD;
@@ -16,6 +17,7 @@ import javafx.stage.Stage;
 
 import java.time.LocalDate;
 import java.time.LocalTime;
+import java.util.logging.Logger;
 
 public class AppointmentController {
 
@@ -23,8 +25,13 @@ public class AppointmentController {
     ClientCRUD clientCRUD;
     DatabaseConnection dbConnection;
     AppointmentCRUD appointmentCRUD;
+    AlertService alertService;
 
-    private String clientId;
+    String clientId;
+    private static final String TIME_PATTERN = "^([01]\\d|2[0-3]):([0-5]\\d)$";
+    private static final Logger logger = Logger.getLogger(AppointmentController.class.getName());
+    private boolean isEditMode = false;
+
 
     public void setClientId(String clientId) {
         this.clientId = clientId;
@@ -35,6 +42,7 @@ public class AppointmentController {
 
         this.dbConnection = new DatabaseConnection();
         this.navigateService = new NavigateService();
+        this.alertService = new AlertService();
         this.clientCRUD = new ClientCRUD(dbConnection);
         this.appointmentCRUD = new AppointmentCRUD(dbConnection);
 
@@ -78,7 +86,6 @@ public class AppointmentController {
     @FXML
     TableColumn<Appointment, String> appointmentStatusColumn;
 
-
     @FXML
     public void initialize() {
 
@@ -87,23 +94,54 @@ public class AppointmentController {
         status.getItems().addAll("Cancelled", "Scheduled", "Completed");
         status.setValue("Pleas choose");
 
-
     }
 
-    public void onSaveButtonClick(ActionEvent event) {
+    public void onSaveButtonClick(ActionEvent ignoredEvent) {
 
-        String idAppointment = clientID.getText();
-        String institutAppointment = institution.getText();
-        String cityAppointment = city.getText();
-        String streetAppointment = street.getText();
+        String idAppointment = clientID.getText().trim();
+        String institutAppointment = institution.getText().trim();
+        String cityAppointment = city.getText().trim();
+        String streetAppointment = street.getText().trim();
         LocalDate localDate = date.getValue();
-        String timeAppointment = time.getText();
+        String timeAppointment = time.getText().trim();
         String statusAppointment = status.getValue();
 
+        if (idAppointment.isEmpty() || institutAppointment.isEmpty() || cityAppointment.isEmpty() ||
+                streetAppointment.isEmpty() || localDate == null || timeAppointment.isEmpty() || statusAppointment == null) {
+            alertService.showErrorAlert("Please fill out all required fields.");
+            return;
+        }
 
-        appointmentCRUD.insertAppointment(idAppointment, localDate, timeAppointment, institutAppointment, cityAppointment, streetAppointment, statusAppointment);
+        if (!timeAppointment.matches(TIME_PATTERN)) {
+            alertService.showErrorAlert("Time format invalid. It has to be HH:MM.");
+            return;
+        }
 
+        if (!isEditMode) {
 
+            boolean insertSuccess = appointmentCRUD.insertAppointment(idAppointment, localDate, timeAppointment, institutAppointment,
+                    cityAppointment, streetAppointment, statusAppointment);
+            if (insertSuccess) {
+                alertService.showInfoAlert("New appointment was added successfully.");
+            } else {
+                alertService.showErrorAlert("Error adding the appointment.");
+            }
+        } else {
+
+            Integer appointmentId = appointmentCRUD.getAppointmentId(idAppointment, localDate, timeAppointment);
+            if (appointmentId == null) {
+                alertService.showErrorAlert("Error: AppointmentID could not be retrieved from the database.");
+                return;
+            }
+
+            boolean updateSuccess = appointmentCRUD.updateAppointment(appointmentId, idAppointment, localDate, timeAppointment,
+                    institutAppointment, cityAppointment, streetAppointment, statusAppointment);
+            if (updateSuccess) {
+                alertService.showInfoAlert("Appointment updated successfully.");
+            } else {
+                alertService.showErrorAlert("Error updating the Appointment.");
+            }
+        }
     }
 
     @FXML
@@ -113,7 +151,7 @@ public class AppointmentController {
         ObservableList<Client> clients = clientCRUD.getClientByClientId(clientID.getText());
 
         if (clients == null || clients.isEmpty()) {
-            System.out.println("Kein Client mit der angegebenen ID gefunden.");
+            logger.info("No client found with the specified ID.");
             return;
         }
 
@@ -132,7 +170,7 @@ public class AppointmentController {
 
     public void setAppointmentDetails(Appointment appointment) {
         if (appointment == null) {
-            System.out.println("Kein gültiger Termin übergeben.");
+            logger.info("No valid appointment given.");
             return;
         }
 
@@ -143,14 +181,14 @@ public class AppointmentController {
         date.setValue(appointment.getDate());
         time.setText(String.valueOf(appointment.getTime()));
 
+        setEditMode(true);
 
         ObservableList<Appointment> appointmentList = appointmentCRUD.getAppointmentsByClientId(clientID.getText());
 
         if (appointmentList == null || appointmentList.isEmpty()) {
-            System.out.println("Keine Termine für Client-ID gefunden: " + clientID.getText());
+            logger.info("No appointments found for client ID: " + clientID.getText());
             return;
         }
-
 
         appointmentDateClientColumn.setCellValueFactory(new PropertyValueFactory<>("date"));
         appointmentTimeClientColumn.setCellValueFactory(new PropertyValueFactory<>("time"));
@@ -159,18 +197,28 @@ public class AppointmentController {
         appointmentStreetColumn.setCellValueFactory(new PropertyValueFactory<>("street"));
         appointmentStatusColumn.setCellValueFactory(new PropertyValueFactory<>("status"));
 
-
         appointmentTableClient.setItems(appointmentList);
     }
 
+    public void setEditMode(boolean editMode) {
+        this.isEditMode = editMode;
+
+        if(editMode){
+
+            saveButton.setText("UPDATE");
+            saveButton.setStyle("-fx-background-color: #008689; -fx-text-fill: #FFFFFF;");
+        }else{
+            saveButton.setText("SAVE");
+        }
+    }
 
     public void setAppointments(ObservableList<Appointment> appointmentList) {
         if (appointmentList == null || appointmentList.isEmpty()) {
-            System.out.println("Die übergebene Terminliste ist leer oder null.");
+            logger.info("The appointment list passed is empty or null.");
             return;
         }
 
-        Appointment firstAppointment = appointmentList.get(0);
+        Appointment firstAppointment = appointmentList.getFirst();
         clientID.setText(firstAppointment.getId());
 
         appointmentDateClientColumn.setCellValueFactory(new PropertyValueFactory<>("date"));
